@@ -118,9 +118,9 @@ endif
 	# FIXME: LinuxThread's libpthread.so doesn't.  It would be good
 	# to either fix that, or use a more robust method than searching
 	# for /tls/ in the path to identify NPTL.
-	find debian/$(curpass) -type f \( -regex '.*lib.*/ld.*so.*' \
-		-o -regex '.*lib.*/tls/.*libpthread.*so.*' \
-		-o -regex '.*lib.*/libc[.-].*so.*' \) \
+	find debian/$(curpass) -type f \( -regex '.*lib[0-9]*/ld.*so.*' \
+		-o -regex '.*lib[0-9]*/tls/.*libpthread.*so.*' \
+		-o -regex '.*lib[0-9]*/libc[.-].*so.*' \) \
 		-exec chmod a+x '{}' ';'
 	dh_makeshlibs -p$(curpass) -V "$(call xx,shlib_dep)"
 
@@ -145,9 +145,9 @@ $(patsubst %,$(stamp)binaryinst_%,$(DEB_UDEB_PACKAGES)): $(stamp)debhelper
 
 	dh_compress -p$(curpass)
 	dh_fixperms -p$(curpass)
-	find debian/$(curpass) -type f \( -regex '.*lib.*/ld.*so.*' \
-		-o -regex '.*lib.*/tls/.*libpthread.*so.*' \
-		-o -regex '.*lib.*/libc[.-].*so.*' \) \
+	find debian/$(curpass) -type f \( -regex '.*lib[0-9]*/ld.*so.*' \
+		-o -regex '.*lib[0-9]*/tls/.*libpthread.*so.*' \
+		-o -regex '.*lib[0-9]*/libc[.-].*so.*' \) \
 		-exec chmod a+x '{}' ';'
 	# dh_makeshlibs -p$(curpass) -V "$(call xx,shlib_dep)"
 	dh_installdeb -p$(curpass)
